[Security Manager Replacement] Phase off SecurityManager usage in favor of Java Agent
Signed-off-by: Andriy Redko <drreta@gmail.com>